# url_short_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  mypy.ini  pyproject.toml
migrations/: env.py
src/: main.py
src/adapters/api/: health.py  url_controller.py
src/adapters/database/: models.py  session.py  url_repository.py
src/adapters/database/tables/: base.py  url.py
src/adapters/fastapi/: api.py  schemas.py
src/core/: config.py
src/core/entities/: url.py
src/core/ports/: url_repository.py
src/core/services/: url_service.py
